--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-numpy
-pandas
-torch
-torchvision
-scikit-learn
+pandas==1.3.5
+Pillow==8.0.1
+scikit-image==0.19.3
+scikit-learn==1.0.2
+torch==1.13.1
+torchvision==0.14.1
 matplotlib
 jupyter
